Added dump and read last