@@ -3,20 +3,35 @@ package ua.ihromant.mathutils.group;
 import org.junit.jupiter.api.Test;
 import ua.ihromant.mathutils.Inc;
 
+import java.io.BufferedOutputStream;
+import java.io.BufferedReader;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.PrintStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.BitSet;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class IncFinderTest {
     @Test
-    public void generateCom1() {
-        int v = 25;
-        int k = 4;
+    public void generateCom() throws IOException {
+        String prefix = "com";
+        int v = 15;
+        int k = 3;
         int b = v * (v - 1) / k / (k - 1);
-        List<Inc> liners = List.of(beamBlocks(v, k));
+        int r = (v - 1) / (k - 1);
+        DumpConfig conf = readLast(prefix, v, k, () -> new DumpConfig(v, k, b - r - 1, new Inc[]{(beamBlocks(v, k))}));
+        List<Inc> liners = Arrays.asList(conf.partials);
         int left = b - liners.getFirst().b();
         long time = System.currentTimeMillis();
         System.out.println("Started generation for v = " + v + ", k = " + k + ", blocks left " + left + ", base size " + liners.size());
@@ -24,6 +39,7 @@ public class IncFinderTest {
             AtomicLong cnt = new AtomicLong();
             liners = nextStageCanon(liners, cnt);
             left--;
+            dump(prefix, v, k, left, liners);
             System.out.println(left + " " + liners.size() + " " + cnt.get());
         }
         System.out.println("Generated " + left + " " + liners.size());
@@ -55,5 +71,55 @@ public class IncFinderTest {
             }
         });
         return new ArrayList<>(nonIsomorphic.values());
+    }
+
+    private record DumpConfig(int v, int k, int left, Inc[] partials) {}
+
+    private static void dump(String prefix, int v, int k, int left, List<Inc> liners) throws IOException {
+        try (FileOutputStream fos = new FileOutputStream("/home/ihromant/maths/partials/" + prefix + "-" + v + "-" + k + ".txt", true);
+             BufferedOutputStream bos = new BufferedOutputStream(fos);
+             PrintStream ps = new PrintStream(bos)) {
+            ps.println(left + " blocks left");
+            ps.println(liners.size() + " partials");
+            for (Inc l : liners) {
+                IntStream.range(0, l.b()).forEach(line -> ps.println(IntStream.range(0, v)
+                        .filter(p -> l.inc(line, p)).mapToObj(String::valueOf).collect(Collectors.joining(" "))));
+                ps.println();
+            }
+        }
+    }
+
+    private static DumpConfig readLast(String prefix, int v, int k, Supplier<DumpConfig> fallback) {
+        try (FileInputStream fis = new FileInputStream("/home/ihromant/maths/partials/" + prefix + "-" + v + "-" + k + ".txt");
+             InputStreamReader isr = new InputStreamReader(fis);
+             BufferedReader br = new BufferedReader(isr)) {
+            String line;
+            int left = Integer.MIN_VALUE;
+            int lineCount = v * (v - 1) / k / (k - 1);
+            Inc[] partials = null;
+            while ((line = br.readLine()) != null) {
+                left = Integer.parseInt(line.substring(0, line.indexOf(' ')));
+                line = br.readLine();
+                int partialsCount = Integer.parseInt(line.substring(0, line.indexOf(' ')));
+                int partialSize = lineCount - left;
+                partials = new Inc[partialsCount];
+                for (int i = 0; i < partialsCount; i++) {
+                    Inc partial = new Inc(new BitSet(v * lineCount), v, lineCount);
+                    for (int j = 0; j < partialSize; j++) {
+                        String[] pts = br.readLine().split(" ");
+                        for (int l = 0; l < k; l++) {
+                            partial.set(l, Integer.parseInt(pts[l]));
+                        }
+                    }
+                    partials[i] = partial;
+                    br.readLine();
+                }
+            }
+            return new DumpConfig(v, k, left, partials);
+        } catch (FileNotFoundException e) {
+            return fallback.get();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 }
